--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -13,8 +13,8 @@ body {
 }
 
 .content-section {
-  padding-top: 7.5rem;
-  padding-bottom: 7.5rem;
+  padding-top: 5rem;
+  padding-bottom: 5rem;
 }
 
 .content-section-heading h2 {
@@ -104,7 +104,7 @@ h6 {
     height: 100vh;
   }
   .masthead h1 {
-    font-size: 5.5rem;
+    font-size: 5rem;
   }
 }
 
@@ -121,7 +121,7 @@ h6 {
   -o-transition: all 0.4s ease 0s;
   transition: all 0.4s ease 0s;
   transform: translateX(250px);
-  background: #1D809F;
+  background: #F15E4C;
   border-left: 1px solid rgba(255, 255, 255, 0.1);
 }
 
@@ -204,7 +204,7 @@ h6 {
 
 .service-icon {
   background-color: #fff;
-  color: #1D809F;
+  color: #F15E4C;
   height: 7rem;
   width: 7rem;
   display: block;
@@ -305,7 +305,7 @@ footer.footer .social-link {
   width: 4rem;
   line-height: 4.3rem;
   font-size: 1.5rem;
-  background-color: #1D809F;
+  background-color: #F15E4C;
   transition: background-color 0.15s ease-in-out;
   box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1);
 }
@@ -316,7 +316,7 @@ footer.footer .social-link:hover {
 }
 
 a {
-  color: #1D809F;
+  color: #F15E4C;
 }
 
 a:hover, a:focus, a:active {
@@ -324,14 +324,14 @@ a:hover, a:focus, a:active {
 }
 
 .btn-primary {
-  background-color: #1D809F !important;
-  border-color: #1D809F !important;
+  background-color: #F15E4C !important;
+  border-color: #F15E4C !important;
   color: #fff !important;
 }
 
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
-  background-color: #155d74 !important;
-  border-color: #155d74 !important;
+  background-color: #EE3722 !important;
+  border-color: #EE3722 !important;
 }
 
 .btn-secondary {
@@ -355,11 +355,11 @@ a:hover, a:focus, a:active {
 }
 
 .bg-primary {
-  background-color: #1D809F !important;
+  background-color: #F15E4C !important;
 }
 
 .text-primary {
-  color: #1D809F !important;
+  color: #F15E4C !important;
 }
 
 .text-secondary {
