--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -24,7 +24,7 @@ body {
 
 .content-section-heading h3 {
   font-size: 1rem;
-  text-transform: uppercase;
+  <!--text-transform: uppercase;-->
 }
 
 h1,
@@ -374,4 +374,8 @@ a:hover, a:focus, a:active {
 
 .text-secondary {
   color: #ecb807 !important;
+}
+
+.custom_li{
+   display:inline-block;
 }
