--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -15,7 +15,7 @@ body {
 .content-section {
   padding-top: 2rem;
   padding-bottom: 2rem;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .content-section-heading h2 {
