--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -86,25 +86,25 @@ h6 {
   display: table;
   width: 100%;
   height: auto;
-  padding-top: 7rem;
+  padding-top: 2rem;
   padding-right: 0rem;
   padding-bottom: 7rem;
   background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%), url("../img/walnut02.png");
   background-position: left center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
 }
 
 .masthead h1 {
   font-size: 4rem;
-  font-size: 4vmax;
+  font-size: 7vmax;
   margin: 0;
   padding: 0;
 }
 
 .masthead h4 {
   font-size: 2.5rem;
-  font-size: 2.5vmax;
+  font-size: 3.5vmin;
   margin: 0;
   padding: 0;
 }
